t1 r4